--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>caffee</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
   </head>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand"  href="#"><img style="width:10%;" src="assets/image/WhatsApp Image 2023-07-28 at 13.19.17.jpg" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,14 +53,16 @@
 
     <section id="home" class="sections landingpage">
       <h1 class="section_header">COFFEE TIME <span> CAFÈ </span></h1>
-      <div class="designed">
-        <p>
+      <!-- <div class="designed"> -->
+      <center>
+          <p>
           At coffee time, we believe that coffee is more than just a beverage;
           it's an experience. <br />
           From the rich aroma that fills the air to the delightful taste that
           lingers on your palate, each cup of coffee tells a story. <br />We
           invite you to be a part of this journey and savor every moment.
         </p>
+      </center>
       </div>
     </section>
 
@@ -111,11 +113,11 @@
           <input type="text" placeholder="EMAIL" /><br /><br />
           <input type="message" placeholder="MESSAGE" />
           <br /><br />
-          <button type="send">SEND MESSAGE</button><br /><br />
+          <button class="buttonw" type="send">SEND MESSAGE</button><br /><br />
         </form>
         <div class="ourcontact">
-          <p>Phone: <a href="tel:+256760447637">+256760447637</a></p>
-          <p>
+          <p style="color: white;">Phone: <a href="tel:+256760447637">+256760447637</a></p>
+          <p style="color: white;">
             Email:
             <a href="mailto:kndjoshua6@gmail.com"></a>abigailkisakye@gmail.com
           </p>
